# fern

./: .gitignore  NOTES.md  README.md  fern-schema.yaml  overview.excalidraw
fern-runtime/: Cargo.toml  README.md  fern-schema.yaml
fern-runtime-wasmtime/: Cargo.toml
fern-runtime-wasmtime/src/: iroh_helpers.rs  lib.rs  main.rs  runtime.rs  runtime_config.rs  sqlite.rs
fern-runtime-wasmtime/src/runtime/: fern_gossip.rs
fern-runtime-wasmtime/src/sqlite/: database.rs  error.rs  rows.rs  value.rs
fern-runtime/src/: gossip.rs  guest.rs  iroh_helpers.rs  lib.rs
fern-runtime/src/guest_fns/: debug.rs  gossip.rs  kv.rs  mod.rs  sqlite_improved.rs  tcp.rs
fern-sdk/: Cargo.toml
fern-sdk/src/: lib.rs  sqlite.rs
fern-sdk/wit/: world.wit
fern-server/: Cargo.toml  sample-config.toml
fern-server/src/: api.rs  cli.rs  data.rs  guest_instance.rs  lib.rs  main.rs  server.rs
fern-server/src/api/: client.rs
fern-server/src/data/: guest_row.rs  module_row.rs
fern-server/src/guest_instance/: shutdown_module.rs  update_module.rs
fern-server/src/server/: create_module.rs  get_info.rs  gossip.rs  remove_module.rs  server_start.rs  update_bootstrap.rs  update_module.rs
fern-ui/: Cargo.toml  Dioxus.toml
fern-ui/assets/: tailwind.css
fern-ui/src/: api.rs  main.rs  server.rs
fern-ui/src/components/: create_guest.rs  echo.rs  guest_list.rs  hero.rs  mod.rs
fern-ui/src/views/: home.rs
sample-guests/hello-world/: Cargo.toml  xtp.toml
sample-guests/hello-world/src/: lib.rs  pdk.rs
test_guest/: README.MD
test_guest/fern-log/: Cargo.toml  xtp.toml
test_guest/fern-log/src/: lib.rs  pdk.rs
test_guest/test-py-revised/: README.md  pyproject.toml  xtp.toml
test_guest/test-py-revised/plugin/: __init__.py  pdk_imports.py  pdk_types.py  plugin.py
test_guest/test-rs-gossip/: Cargo.toml  xtp.toml
test_guest/test-rs-gossip/src/: lib.rs  pdk.rs
test_guest/test-rs-revised/: Cargo.toml  xtp.toml
test_guest/test-rs-revised/src/: lib.rs  pdk.rs
test_guest/wasmtime-component-test/: Cargo.toml  README.md
test_guest/wasmtime-component-test/src/: lib.rs
