[package]
name = "fern-runtime-wasmtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
blake3 = { version = "1.8.2", features = ["digest"] }
env_logger = "0.11.8"
hmac-sha256 = "1.1.12"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
iroh-gossip = "0.95.0"
log = "0.4"
redb = "3.1.0"
rusqlite = { version = "0.37.0", features = ["bundled", "modern-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main", features = [
  "async",
  "component-model",
  "runtime",
  "std",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime.git", branch = "main" }
turso = "0.3.2"
toml = "0.9.8"
rand = { version = "0.9.2", features = ["os_rng"] }
owo-colors = "4.2.3"
swarm-discovery = "0.4.1"
clap = { version = "4.5.53", features = ["derive"] }

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
