[package]
name = "fern-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.10"
extism = "1.12.0"
extism-convert = "1.12.0"
log = "0.4"
redb = "3.1.0"
rusqlite = { version = "0.37.0", features = ["bundled", "modern-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
uuid = { version = "1.0", features = ["v4"] }
