[package]
name = "fern-server"
version = "0.1.0"
edition = "2024"

[dependencies]
fern-runtime = {path = "../fern-runtime"}
anyhow = "1.0.100"
base64 = "0.22.1"
env_logger = "0.11.8"
extism = "1.12.0"
extism-convert = "1.12.0"
hmac-sha256 = "1.1.12"
iroh = "0.95.1"
iroh-gossip = "0.95.0"
log = "0.4"
redb = "3.1.0"
rusqlite = { version = "0.37.0", features = ["bundled", "modern-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
blake3 = { version = "1.8.2", features = ["digest"] }
chrono = "0.4.42"